# verily-raw-data-tools

./: EXTERNALIZATION_PLAN.md  MIGRATION_GUIDE.md  README.md  RELEASE_NOTES_v1.0.0.md  SUMMARY.md  conftest.py  pyproject.toml
.claude/: README.md
.claude/commands/: sensor-data.md  sensor-devices.md  sensor-explore.md
examples/: basic_data_read.py  custom_algorithm.py  full_pipeline.py  unpack_and_transform.py
tests/: test_acceptance.py  test_data_source_cache.py  test_dataflow_utils.py  test_sql_injection.py  test_timestamps.py  test_timezone_utils.py
verily/: __init__.py
verily/ds_sdk/: __init__.py
verily/ds_sdk/contrib/: README.md  data_unpacking.py  data_unpacking_legacy.py  data_unpacking_legacy_test.py  data_unpacking_numba_test.py  data_unpacking_test.py  picard_eda_converter.py  picard_eda_converter_test.py  rialto_timezone_fix.py  rialto_timezone_fix_test.py
verily/ds_sdk/contrib/test_data/: eda.csv
verily/ds_sdk/core/: conditions_test.py  data_filter_integration_test.csv  data_filters.py  data_filters_integration_test.py  data_filters_test.py  options.py  options_test.py  query_runner.py  schema_fetcher.py  sensors_io.py
verily/ds_sdk/core/arrotolata/: source.py  user_namespace.py
verily/ds_sdk/core/gcp/: bigquery_source_wrapper.py  credentials.py  secret_manager.py  throttler.py  throttler_test.py
verily/ds_sdk/core/grpc/: registry_service.py  registry_service_test.py
verily/ds_sdk/core/io/: cacheable_source.py  data_source_cache.py
verily/ds_sdk/core/metrics/: __init__.py  histogram.py  histogram_test.py
verily/ds_sdk/core/schemas/: __init__.py  schema_utils.py  schema_utils_test.py
verily/ds_sdk/core/sensorsuite/: __init__.py  derived_data_sources.py  overwrite_keys.py  overwrite_keys_test.py  sensor_store_client.py  sensor_store_client_test.py
verily/ds_sdk/core/studies/: __init__.py  gen_studies.py  get_study_info_test.py  (+1 more)
verily/ds_sdk/integration/: sandwich_batch_integration_test.py  sandwich_batch_test_pipeline.py  sandwich_dataflow_integration_test.py  sandwich_streaming_integration_test.py  sandwich_streaming_integration_test_pipeline.py
verily/ds_sdk/protos/: ble.proto  ble_pb2.py  ble_pb2.pyi  enums.proto  enums_pb2.py  enums_pb2.pyi  management_resources.proto  management_resources_pb2.py  management_resources_pb2.pyi  management_service.proto  management_service_pb2.py  management_service_pb2.pyi  management_service_pb2_grpc.py  types.proto  types_pb2.py  types_pb2.pyi
verily/raw_data_tools/: __init__.py  conditions.py
verily/raw_data_tools/io/: __init__.py  data_filters.py  raw_data_io.py
verily/raw_data_tools/pipeline/: __init__.py  credentials.py  dataflow_utils.py  options.py
verily/raw_data_tools/protos/: __init__.py
verily/raw_data_tools/schemas/: __init__.py
verily/raw_data_tools/transforms/: __init__.py  build_data_frames.py  custom_transform.py  group_into_data_frames.py  key_by.py
verily/raw_data_tools/unpacking/: __init__.py  data_unpacking.py  data_unpacking_numba.py
verily/raw_data_tools/utils/: __init__.py  data_source_cache.py  rialto_timezone_fix.py  timestamps.py
(+61 files in other folders)
