[build-system]
requires = [ "flit_core >=3.2,<4",]
build-backend = "flit_core.buildapi"

[project]
name = "verily-raw-data-tools"
description = "Tools for reading, unpacking, and transforming sensor data from BigQuery in Verily Workbench."
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.8.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    # Core Apache Beam and GCP integration
    "apache-beam[gcp]>=2.43.0",

    # Google Cloud libraries
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-bigquery-storage[fastavro]>=2.0.0",
    "google-cloud-storage>=2.18.2",
    "google-auth>=2.0.0",

    # Data processing
    "pandas>=1.3.0,<2.0.0",
    "numpy>=1.20.0",
    "numba>=0.55.0",
    "scipy>=1.7.0",

    # Utilities
    "attrs>=21.0.0",
    "frozendict>=2.0.0",
    "immutabledict>=2.0.0",
    "tabulate>=0.8.0",

    # Protobuf (for DataPoint schemas)
    "protobuf>=3.20.0,<5.0.0",
]

[[project.authors]]
name = "Verily Life Sciences"
email = "workbench-support@verily.com"

[project.urls]
Documentation = "https://github.com/verily-src/sensorsuite-ds-sdk/blob/master/README.md"
Source = "https://github.com/verily-src/sensorsuite-ds-sdk/"
"Bug Reports" = "https://github.com/verily-src/sensorsuite-ds-sdk/issues"

[project.optional-dependencies]
dev = [
    "bqemulatormanager",
    "flit",
    "mypy",
    "mypy-protobuf",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "toml",
    "types-protobuf",
    "types-pytz",
    "types-redis",
    "types-toml",
    "wheel",
    "yapf",
]

[tool.poetry]
include = [ "core/testing/test_data/canonical_1h_imu.csv", "core/testing/test_data/imu_1h_sensor2_30hz.csv", "core/testing/test_data/imu_1h_sensor1_50hz.csv", "core/testing/test_data/imu.json", "core/testing/test_data/ppg.json", "verily/ds_sdk/py.typed"]

[tool.mypy]
ignore_missing_imports = true
exclude = [ "^.*_test\\.py$",]

[tool.isort]
profile = "google"
line_length = 80
skip = [ "verily/ds_sdk/core/schemas/__init__.py",]

[tool.yapf]
based_on_style = "google"

[tool.flit.module]
name = "verily"

[tool.pytest.ini_options]
addopts = "--ignore-glob=**/gen/* --ignore-glob=**/test_pipelines/* --disable-pytest-warnings -n=auto"
# Line numbers are missing in some Beam code, so log messages within
# Beam test helpers cause pytest to crash.  Work around this by
# treating lineno as a string (%s) instead of a number (%d).
log_format = "%(levelname)-8s %(name)s:%(filename)s:%(lineno)s %(message)s"

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
line-length = 80
